# SpecCompanion

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  jest.config.cjs  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts
.codex/: verify.commands
.codex/bootstrap/: tests-docs.v1.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  security.yml
auraforge-docs/: CONVERSATION.md  PROMPTS.md  README.md  SPEC.md
codex/: CHANGELOG_DRAFT.md  CHECKPOINTS.md  DECISIONS.md  PLAN.md  SESSION_LOG.md  VERIFICATION.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: errors.rs  lib.rs  main.rs  utils.rs
src-tauri/src/commands/: git.rs  mod.rs  project.rs  report.rs  spec.rs  test_exec.rs  test_gen.rs
src-tauri/src/db/: mod.rs  queries.rs  schema.rs
src-tauri/src/models/: mod.rs  project.rs  report.rs  spec.rs  test.rs
src-tauri/src/services/: alignment.rs  codebase_scanner.rs  git_service.rs  llm_generator.rs  mod.rs  spec_parser.rs  template_generator.rs  test_runner.rs
src/__tests__/: hooks.test.tsx
src/hooks/: useProjects.ts  useReports.ts  useSpecs.ts  useTestExecution.ts  useTestGeneration.ts
src/lib/: api.ts  types.ts
src/pages/: Dashboard.tsx  ProjectView.tsx  Reports.tsx  Settings.tsx  SpecView.tsx  TestExecution.tsx  TestGeneration.tsx
src/styles/: index.css
tests/ui/: home.visual.spec.ts
(+15 files in other folders)
